# vita_nail

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
vita_nail/: manage.py
vita_nail/api/: admin.py  auth.py  bot_notifications.py  models.py  serializers.py  urls.py  views.py
vita_nail/api/migrations/: 0001_initial.py  0002_alter_window_date.py  0002_client_alter_window_options_remove_window_id_and_more.py  0003_alter_window_date.py  0003_rename_user_window_client_rename_user_work_client.py
vita_nail/api/serializers/: admin_serializers.py  client_serializers.py
vita_nail/api/views/: admin_views.py  client_views.py
vita_nail/tg_bot/: bot.py  commands.py  handlers.py
vita_nail/vita_nail/: asgi.py  settings.py  urls.py  wsgi.py
